--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Portfolio d'Alexandre Husset, développeur web spécialisé en développement front-end et back-end, avec une expertise dans les technologies modernes telles que React, Node.js, Docker, et Kubernetes." />
+  <meta name="keywords" content="développeur web, React, Node.js, Docker, Kubernetes, MongoDB, portfolio, front-end, back-end" />
+  <meta name="author" content="Alexandre Husset" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <title>Portfolio AH - Alexandre Husset</title>
+  <link rel="icon" href="%PUBLIC_URL%/images/photo.jpg" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Portfolio AH - Alexandre Husset" />
+  <meta property="og:description" content="Découvrez mon travail en tant que développeur web freelance, avec des projets réalisés en React, Node.js, Docker, et bien plus encore." />
+  <meta property="og:image" content="%PUBLIC_URL%/images/photo.jpg" />
+  <meta property="og:url" content="https://votre-site.com" />
+  <meta property="og:type" content="website" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:title" content="Portfolio AH - Alexandre Husset" />
+  <meta name="twitter:description" content="Développeur web spécialisé en technologies modernes, découvrez mes projets." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/images/photo.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Meta Robots -->
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="fr" />
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+</body>
 </html>
