Modification du fichier index.html pour les balises meta

--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,14 @@
   <meta name="author" content="Alexandre Husset" />
 
   <title>Portfolio AH - Alexandre Husset</title>
-  <link rel="icon" href="%PUBLIC_URL%/images/photo.jpg" />
+  <link rel="icon" href="${process.env.PUBLIC_URL}/images/photo.jpg" />
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Portfolio AH - Alexandre Husset" />
   <meta property="og:description" content="Découvrez mon travail en tant que développeur web freelance, avec des projets réalisés en React, Node.js, Docker, et bien plus encore." />
-  <meta property="og:image" content="%PUBLIC_URL%/images/photo.jpg" />
-  <meta property="og:url" content="https://votre-site.com" />
+  <meta property="og:image" content="${process.env.PUBLIC_URL}/images/photo.jpg" />
+  <meta property="og:url" content="https://ahusset.github.io/portfolio" />
   <meta property="og:type" content="website" />
-
-  <!-- Twitter Card Meta Tags -->
-  <meta name="twitter:title" content="Portfolio AH - Alexandre Husset" />
-  <meta name="twitter:description" content="Développeur web spécialisé en technologies modernes, découvrez mes projets." />
-  <meta name="twitter:image" content="%PUBLIC_URL%/images/photo.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Meta Robots -->
   <meta name="robots" content="index, follow" />
